test_outputs/connlist/exposure_test_with_different_rules_2_with_matching_pod_exposure_output.txt
0.0.0.0-255.255.255.255 => hello-world/matching-workload[Deployment] : All Connections
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment] : All Connections
hello-world/matching-workload[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/matching-workload[Deployment] => hello-world/workload-a[Deployment] : TCP 8080,9090
hello-world/matching-workload[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] => hello-world/matching-workload[Deployment] : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] => hello-world/matching-workload[Deployment] : All Connections
hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment] : TCP 8080

Exposure Analysis Result:
Egress Exposure:
hello-world/matching-workload[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/matching-workload[Deployment] 	=> 	entire-cluster : All Connections
hello-world/workload-a[Deployment]        	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment]        	=> 	entire-cluster : All Connections
hello-world/workload-b[Deployment]        	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment]        	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/matching-workload[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/matching-workload[Deployment] 	<= 	entire-cluster : All Connections
hello-world/workload-a[Deployment]        	<= 	hello-world/[pod with {{Key:app,Operator:Exists,Values:[],}}] : TCP 8080
hello-world/workload-a[Deployment]        	<= 	hello-world/[pod with {{Key:app,Operator:In,Values:[x],}}] : TCP 9090
hello-world/workload-b[Deployment]        	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment]        	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/matching-workload[Deployment] is not protected on Egress
hello-world/matching-workload[Deployment] is not protected on Ingress
hello-world/workload-a[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
